# homelab

./: .gitattributes  .gitignore  Makefile  README.md  index.yaml
.claude/commands/: tf-version-check.md  version-check.md
.github/: dependabot.yml
.github/workflows/: release-charts.yaml  rpi-kernel-va48.yaml  terraform.yaml
0-configure-saas/: .terraform.lock.hcl  README.md  main.tf  terraform.tfstate  variables.tf
0-configure-saas/boostrap-saas/: main.tf  resources-aws.tf  resources-cloudflare.tf  resources-terraform-cloud.tf  variables.tf
1-provision/backbone/: dns-secrets  main.tf
1-provision/prod-vultr/: main.tf  vars.tf
argocd/appprojects/: _dolfan.yaml  _mysql.yaml  ad-block.yaml  blackd.yaml  cert-manager.yaml  cloudflare-gateway.yaml  cloudnative-pg.yaml  cluster-management.yaml  dfs.yaml  dns-manager.yaml  hindsight.yaml  immich.yaml  ingress-controller.yaml  jay-coin-bot.yaml  jay-india.yaml  jay-stock-bot.yaml  loadbalancer.yaml  monitoring.yaml  namespace-management.yaml  nas.yaml  (+4 more)
cluster-setup/: Makefile  TOOL_RESEARCH.md  ansible.cfg  argocd.yaml  etc-hosts.yaml  firewall.yaml  init-backbone-os.yaml  k3s.yaml  load-public-ips.yaml  requirements.yaml  ssh-hardening.yaml  wireguard-oracle.yaml  wireguard.yaml
docs/: runbook-cilium-migration-v3.md
docs/diagram/: overview.py  pyproject.toml
objects/: bhyoo-registry-key.yaml  k3s-upgrade-plan.yaml
values/: adguard-home.yaml  external-dns.yaml  grafana.yaml  influxdb2.yaml  metrics-server.yaml  prometheus-adapter.yaml  prometheus-community.yaml  rook-ceph-cluster.yaml  traefik.yaml
(+520 files in other folders)
