[tool.poetry]
name = "homelab-diagram"
version = "0.1.0"
description = "Diagram for homelab"
authors = ["Byeonghoon Yoo <bhyoo@bhyoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true